--- a/resources/notification.html
+++ b/resources/notification.html
@@ -6,205 +6,8 @@
     <title>WebSocket Notification Tester</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.6.1/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
-            padding: 20px;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background: white;
-            border-radius: 12px;
-            box-shadow: 0 10px 40px rgba(0,0,0,0.2);
-            overflow: hidden;
-        }
-        .header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 25px;
-            text-align: center;
-        }
-        .header h1 {
-            font-size: 24px;
-            margin-bottom: 8px;
-        }
-        .content {
-            padding: 25px;
-        }
-        .section {
-            margin-bottom: 25px;
-        }
-        .section-title {
-            font-size: 16px;
-            font-weight: 600;
-            color: #333;
-            margin-bottom: 12px;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-        }
-        .status-indicator {
-            width: 12px;
-            height: 12px;
-            border-radius: 50%;
-            background: #dc3545;
-            transition: background 0.3s;
-        }
-        .status-indicator.connected {
-            background: #28a745;
-            box-shadow: 0 0 10px rgba(40, 167, 69, 0.5);
-        }
-        .input-group {
-            margin-bottom: 15px;
-        }
-        label {
-            display: block;
-            font-size: 14px;
-            color: #666;
-            margin-bottom: 6px;
-            font-weight: 500;
-        }
-        input {
-            width: 100%;
-            padding: 12px;
-            border: 2px solid #e0e0e0;
-            border-radius: 8px;
-            font-size: 14px;
-            transition: border-color 0.3s;
-        }
-        input:focus {
-            outline: none;
-            border-color: #667eea;
-        }
-        button {
-            width: 100%;
-            padding: 12px 24px;
-            border: none;
-            border-radius: 8px;
-            font-size: 14px;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-        }
-        .btn-connect {
-            background: #28a745;
-            color: white;
-        }
-        .btn-connect:hover {
-            background: #218838;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(40, 167, 69, 0.3);
-        }
-        .btn-disconnect {
-            background: #dc3545;
-            color: white;
-        }
-        .btn-disconnect:hover {
-            background: #c82333;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(220, 53, 69, 0.3);
-        }
-        .btn-disconnect:disabled,
-        .btn-connect:disabled {
-            background: #cccccc;
-            cursor: not-allowed;
-            transform: none;
-        }
-        .notifications {
-            background: #f8f9fa;
-            border-radius: 8px;
-            padding: 15px;
-            min-height: 200px;
-            max-height: 400px;
-            overflow-y: auto;
-        }
-        .notification-item {
-            background: white;
-            padding: 15px;
-            margin-bottom: 12px;
-            border-radius: 8px;
-            border-left: 4px solid #667eea;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-            animation: slideIn 0.3s ease-out;
-        }
-        @keyframes slideIn {
-            from {
-                opacity: 0;
-                transform: translateX(-20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateX(0);
-            }
-        }
-        .notification-type {
-            display: inline-block;
-            padding: 4px 12px;
-            border-radius: 20px;
-            font-size: 12px;
-            font-weight: 600;
-            margin-bottom: 8px;
-        }
-        .type-JOINED {
-            background: #d4edda;
-            color: #155724;
-        }
-        .type-CALLED {
-            background: #fff3cd;
-            color: #856404;
-        }
-        .type-SERVED {
-            background: #d1ecf1;
-            color: #0c5460;
-        }
-        .notification-message {
-            font-size: 14px;
-            color: #333;
-            margin-bottom: 6px;
-        }
-        .notification-time {
-            font-size: 12px;
-            color: #999;
-        }
-        .empty-state {
-            text-align: center;
-            color: #999;
-            padding: 40px;
-        }
-        .logs {
-            background: #2d2d2d;
-            color: #00ff00;
-            padding: 15px;
-            border-radius: 8px;
-            font-family: 'Courier New', monospace;
-            font-size: 12px;
-            max-height: 200px;
-            overflow-y: auto;
-            line-height: 1.6;
-        }
-        .log-entry {
-            margin-bottom: 4px;
-        }
-        .log-error {
-            color: #ff6b6b;
-        }
-        .log-success {
-            color: #51cf66;
-        }
-        .log-info {
-            color: #74c0fc;
-        }
-    </style>
+
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 <div class="container">
@@ -255,119 +58,7 @@
     </div>
 </div>
 
-<script>
-    let stompClient = null;
-    let connected = false;
+<script src="js/websocket-client.js"></script>
 
-    function log(message, type = 'info') {
-        const logsDiv = document.getElementById('logs');
-        const timestamp = new Date().toLocaleTimeString();
-        const logClass = type === 'error' ? 'log-error' :
-                       type === 'success' ? 'log-success' : 'log-info';
-        logsDiv.innerHTML += `<div class="log-entry ${logClass}">[${timestamp}] ${message}</div>`;
-        logsDiv.scrollTop = logsDiv.scrollHeight;
-    }
-
-    function updateUI(isConnected) {
-        connected = isConnected;
-        const indicator = document.getElementById('statusIndicator');
-        const connectBtn = document.getElementById('connectBtn');
-        const disconnectBtn = document.getElementById('disconnectBtn');
-
-        if (isConnected) {
-            indicator.classList.add('connected');
-            connectBtn.style.display = 'none';
-            disconnectBtn.style.display = 'block';
-        } else {
-            indicator.classList.remove('connected');
-            connectBtn.style.display = 'block';
-            disconnectBtn.style.display = 'none';
-        }
-    }
-
-    function connect() {
-        const serverUrl = document.getElementById('serverUrl').value;
-        const userId = document.getElementById('userId').value;
-
-        if (!userId) {
-            alert('Пожалуйста, введите User ID');
-            return;
-        }
-
-        log(`Попытка подключения к ${serverUrl} с userId: ${userId}`, 'info');
-
-        // Создаем SockJS соединение с параметром userId
-        const socket = new SockJS(`${serverUrl}?userId=${userId}`);
-        stompClient = Stomp.over(socket);
-
-        // Отключаем debug логи (можно включить для отладки)
-        stompClient.debug = (str) => {
-            console.log(str);
-        };
-
-        stompClient.connect({},
-            function(frame) {
-                log('✓ Успешное подключение к WebSocket', 'success');
-                log(`Подписка на /user/${userId}/queue/notifications`, 'info');
-                updateUI(true);
-
-                // Подписываемся на персональную очередь
-                stompClient.subscribe(`/user/queue/notifications`, function(message) {
-                    log('✓ Получено уведомление!', 'success');
-                    const notification = JSON.parse(message.body);
-                    displayNotification(notification);
-                });
-
-                log('✓ Готов к приему уведомлений', 'success');
-            },
-            function(error) {
-                log(`✗ Ошибка подключения: ${error}`, 'error');
-                updateUI(false);
-                console.error('Connection error:', error);
-            }
-        );
-    }
-
-    function disconnect() {
-        if (stompClient !== null) {
-            stompClient.disconnect();
-            log('Отключено от сервера', 'info');
-        }
-        updateUI(false);
-    }
-
-    function displayNotification(notification) {
-        const notificationsDiv = document.getElementById('notifications');
-
-        // Удаляем empty state
-        const emptyState = notificationsDiv.querySelector('.empty-state');
-        if (emptyState) {
-            emptyState.remove();
-        }
-
-        const notificationElement = document.createElement('div');
-        notificationElement.className = 'notification-item';
-
-        const timestamp = new Date(notification.timestamp);
-        const formattedTime = timestamp.toLocaleString('ru-RU');
-
-        notificationElement.innerHTML = `
-            <span class="notification-type type-${notification.type}">${notification.type}</span>
-            <div class="notification-message">${notification.message}</div>
-            <div class="notification-time">📅 ${formattedTime}</div>
-        `;
-
-        notificationsDiv.insertBefore(notificationElement, notificationsDiv.firstChild);
-    }
-
-    // Отключаемся при закрытии страницы
-    window.addEventListener('beforeunload', function() {
-        if (connected) {
-            disconnect();
-        }
-    });
-
-    log('Приложение готово к работе', 'success');
-</script>
 </body>
 </html>
